# ssi_pingme

./: .gitignore  02_pingme_services.html  LICENSE  MANIFEST.in  README.md  conda.dev.env.yaml  core.html  index.html  mkdocs.yml  pingme_api.html  pingme_class.html  pixi.toml  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  test.config.env
.github/workflows/: mkdocs.yaml  tests.yaml
docs/: api.md  core.md  pingme_class.md  services.md
input/: example_samplesheet.tsv
nbs/: 00_core.ipynb  01_pingme_class.ipynb  02_pingme_services.ipynb  03_pingme_api.ipynb  index.ipynb  nbdev.yml  sidebar.yml
pingme/: _modidx.py  api.py  hello_world.py  pingme_class.py  service.py  services.py
pingme/config/: config.default.env  config.default.yaml
src/pingme/: api.py  core.py  pingme_class.py  services.py
src/pingme/config/: config.default.env  config.default.yaml
tests/: __init__.py  conftest.py  test_api.py  test_pingme_class.py  test_services.py
